test/Fail/Issue3217.err
Issue3217.agda:15.12-16: error: [UnequalTerms]
The terms
  true
and
  false
are not equal at type Bool
when checking that the expression λ i → true has type true ≡ false
